<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corp.srihari.increment.Upgrades"
    android:background="#C0C0C0">

    <android.support.v7.widget.Toolbar
        android:id="@+id/silvertoolbar"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/usilver8"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <CheckBox
        android:id="@+id/usilver6"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/upgrade20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/usilver13"
        app:layout_constraintTop_toBottomOf="@+id/usilver5" />

    <Button
        android:id="@+id/usilver9"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/silver_button"
        android:text="@string/upgrades16"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver2"
        app:layout_constraintTop_toTopOf="@+id/usilver2" />

    <Button
        android:id="@+id/usilver8"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/silver_button"
        android:elevation="0dp"
        android:enabled="true"
        android:text="@string/upgrades15"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usilver1"
        app:layout_constraintBottom_toBottomOf="@+id/usilver1"
        android:layout_marginEnd="24dp" />

    <Button
        android:id="@+id/usilver14"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/silver_button"
        android:text="@string/upgrades21"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver7"
        app:layout_constraintTop_toTopOf="@+id/usilver7" />

    <Button
        android:id="@+id/usilver10"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/silver_button"
        android:text="@string/upgrades17"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver3"
        app:layout_constraintTop_toTopOf="@+id/usilver3" />

    <Button
        android:id="@+id/usilver11"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/silver_button"
        android:text="@string/upgrades18"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver4"
        app:layout_constraintTop_toTopOf="@+id/usilver4" />

    <Button
        android:id="@+id/usilver12"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/silver_button"
        android:text="@string/upgrades19"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver5"
        app:layout_constraintTop_toTopOf="@+id/usilver5" />

    <Button
        android:id="@+id/usilver13"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/silver_button"
        android:text="@string/upgrades20"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver6"
        app:layout_constraintTop_toTopOf="@+id/usilver6" />

    <CheckBox
        android:id="@+id/usilver2"
        android:layout_width="168dp"
        android:layout_height="34dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/upgrade16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/usilver9"
        app:layout_constraintTop_toBottomOf="@+id/usilver1" />

    <CheckBox
        android:id="@+id/usilver7"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/upgrade21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/usilver14"
        app:layout_constraintTop_toBottomOf="@+id/usilver6"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/usilver1"
        android:layout_width="185dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:checked="false"
        android:duplicateParentState="false"
        android:fadeScrollbars="true"
        android:filterTouchesWhenObscured="true"
        android:text="@string/upgrade15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/usilver8"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/usilver5"
        android:layout_width="173dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/upgrade19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/usilver12"
        app:layout_constraintTop_toBottomOf="@+id/usilver4"
        tools:layout_editor_absoluteY="332dp" />

    <CheckBox
        android:id="@+id/usilver3"
        android:layout_width="169dp"
        android:layout_height="41dp"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="11dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:duplicateParentState="false"
        android:text="@string/upgrade17"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/usilver10"
        app:layout_constraintTop_toBottomOf="@+id/usilver2" />

    <CheckBox
        android:id="@+id/usilver4"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:text="@string/upgrade18"
        app:layout_constraintRight_toLeftOf="@+id/usilver11"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/usilver3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp" />

    <ImageButton
        android:id="@+id/usilock1"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:elevation="2dp"
        app:srcCompat="@drawable/lockv2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/usilver9"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/usilver9"
        app:layout_constraintTop_toTopOf="@+id/usilver9"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver9"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/usilock6"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:elevation="2dp"
        app:srcCompat="@drawable/lockv2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/usilver14"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/usilver14"
        app:layout_constraintTop_toTopOf="@+id/usilver14"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver14"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/usilock5"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:elevation="2dp"
        app:srcCompat="@drawable/lockv2"
        app:layout_constraintTop_toTopOf="@+id/usilver13"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/usilver13"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/usilver13"
        app:layout_constraintBottom_toBottomOf="@+id/usilver13"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintVertical_bias="0.25"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/usilock4"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:elevation="2dp"
        app:srcCompat="@drawable/lockv2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/usilver12"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/usilver12"
        app:layout_constraintTop_toTopOf="@+id/usilver12"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver12"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/usilock3"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:elevation="2dp"
        app:srcCompat="@drawable/lockv2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/usilver11"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/usilver11"
        app:layout_constraintTop_toTopOf="@+id/usilver11"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver11"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/usilock2"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:elevation="2dp"
        app:srcCompat="@drawable/lockv2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/usilver10"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/usilver10"
        app:layout_constraintTop_toTopOf="@+id/usilver10"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/usilver10"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="Current Value = $1/click"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usilver7"
        app:layout_constraintVertical_bias="0.604" />

    <TextView
        android:id="@+id/bronze_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Silver Upgrades"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backu_button"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/backu_button"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/backu_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/usilver1"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bronze_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/back_button" />



</android.support.constraint.ConstraintLayout>
